#165: wrapping writting calls from api in a wrapper. adapted rest calls